samples/_failures_safe/1761795146_f22d46_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dd5f16e9.c: In function ‘parser_init’:
./samples/SAFE/__tmp_dd5f16e9.c:150:5: error: expected declaration or statement at end of input
  150 |     parser->lexer = lexer;
      |     ^~~~~~
